
Changes with v1.0.2

  *) Tighten error handling in tardemux. [Graham Leggett]

Changes with v1.0.1

  *) Updates to the spec file for the benefit of Fedora.
     [Graham Leggett]

Changes with v1.0.0

  *) Initial creation of the autotools. [Graham Leggett]
